[package]
name = "run-jupyter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tree-sitter = "0.20"
jupyter-client = { git = "https://github.com/tacogips/jupyter-client-rs", branch = "main"}
thiserror = "1.0"
mlua = { version = "0.7", features = ["luajit", "vendored", "module", "macros", "send", "async"] }

tokio = {version = "1.19" , features = ["rt-multi-thread"]}

[build-dependencies]
cc="*"

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
lto = true
